[tool.poetry]
name = "errr-py"
version = "0.1.0"
description = "SDK to collect and send crash reports to errr"
authors = ["Rafal Stapinski <stapinskirafal@gmail.com>"]
license = "BSD-2"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pylint = "^2.7.4"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
